tests/valid/SetLength_Valid_1.whiley
void main([string] args):
     xs = {1,2,3}
     println(str(|xs|))
