tests/invalid/SetDefine_CompileFail_1.whiley
define intlist as {int}

void main([string] args):    
     il = {1,2,3}
     print str(|il|)
     print str(il[0])
